# krul_interpreter

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
.github/workflows/: ci.yaml
app/: CMakeLists.txt  main.cpp
cmake/: conan.cmake
modules/HttpClient/: CMakeLists.txt
modules/HttpClient/include/: HttpClient.hpp
modules/HttpClient/include/curlwrapper/: httpclient.hpp  httpresponse.hpp  httpstatuscode.hpp
modules/HttpClient/src/curlwrapper/: httpclient.cpp
modules/KrulInterpreter/: CMakeLists.txt
modules/KrulInterpreter/include/: Krul.hpp
modules/KrulInterpreter/include/commands/: abs_command.hpp  add_command.hpp  add_digit_command.hpp  add_string_command.hpp  cat_command.hpp  commands.hpp  dec_command.hpp  div_command.hpp  dup_command.hpp  enl_command.hpp  fun_command.hpp  geq_command.hpp  get_label_command.hpp  get_variable_command.hpp  gge_command.hpp  ggt_command.hpp  gle_command.hpp  glt_command.hpp  gne_command.hpp  gto_command.hpp  icommand.hpp  idx_command.hpp  inc_command.hpp  len_command.hpp  mod_command.hpp  mul_command.hpp  neg_command.hpp  ret_command.hpp  rev_command.hpp  rot_command.hpp  set_label_command.hpp  set_variable_command.hpp  slc_command.hpp  sub_command.hpp
modules/KrulInterpreter/include/exceptions/: divide_by_zero_exception.hpp  illegal_argument_exception.hpp  index_out_of_range_exception.hpp  krul_exception.hpp  krul_exceptions.hpp  no_such_field_exception.hpp  no_such_method_exception.hpp  null_pointer_exception.hpp
modules/KrulInterpreter/include/interpreter/: krul_callstack.hpp  krul_labels.hpp  krul_memory.hpp  krul_program.hpp  krul_stack.hpp  krul_variables.hpp
modules/KrulInterpreter/src/commands/: abs_command.cpp  add_command.cpp  add_digit_command.cpp  add_string_command.cpp  cat_command.cpp  dec_command.cpp  div_command.cpp  dup_command.cpp  enl_command.cpp  fun_command.cpp  geq_command.cpp  get_label_command.cpp  get_variable_command.cpp  gge_command.cpp  ggt_command.cpp  gle_command.cpp  glt_command.cpp  gne_command.cpp  gto_command.cpp  idx_command.cpp  inc_command.cpp  len_command.cpp  mod_command.cpp  mul_command.cpp  neg_command.cpp  ret_command.cpp  rev_command.cpp  rot_command.cpp  set_label_command.cpp  set_variable_command.cpp  slc_command.cpp  sub_command.cpp
modules/KrulInterpreter/src/interpreter/: krul_callstack.cpp  krul_labels.cpp  krul_memory.cpp  krul_program.cpp  krul_stack.cpp  krul_variables.cpp
tests/: CMakeLists.txt
tests/src/HttpClient/: httpclienttests.cpp
tests/src/KrulInterpreter/Commands/: test_abs_command.cpp  test_add_command.cpp  test_add_digit_command.cpp  test_dec_command.cpp  test_div_command.cpp  test_dup_command.cpp  test_enl_command.cpp  test_fun_command.cpp  test_geq_command.cpp  test_get_variable_command.cpp  test_gge_command.cpp  test_ggt_command.cpp  test_gle_command.cpp  test_glt_command.cpp  test_gne_command.cpp  test_gto_command.cpp  test_idx_command.cpp  test_inc_command.cpp  test_len_command.cpp  test_mod_command.cpp  test_mul_command.cpp  test_neg_command.cpp  test_ret_command.cpp  test_rev_command.cpp  test_rot_command.cpp  test_set_label_command.cpp  test_set_variable_command.cpp  test_slc_command.cpp  test_sub_command.cpp  text_cat_command.cpp
